--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                     Contamos con service a domicilio.  </p>
 
                     <br><br><br><br><br><br><br><br><br>
-                   <p><i class="fas fa-phone"></i>    4228-3919    
-                <a href="https://www.instagram.com/casavillarservice/"> <i class="fab fa-instagram"></i>   Seguinos en instagram</p> </a>
+                    <b><p><i class="fas fa-phone"></i>    4228-3919 </b> 
+                    <a href="https://www.instagram.com/casavillarservice/"> <i class="fab fa-instagram"></i> <b>  Seguinos en instagram</p> </a></b>
                     
 
              </div>
